Fixed a bug where in the see poll menu the percentage wouldn't show correct amount. Fixed a bug while after setting the icon for new poll the items wouldn't update in PollCreateMenu.java.